- Fixed Bug #42272 (var_export() incorrectly escapes char(0)). - Also fixed var_export() in unicode mode, as the function would actually   generate non-parsable strings which defeats the purpose of var_export().

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@247841 c90b9560-bf6c-de11-be94-00142212c4b1